# RLM-implementation

./: .env.example  .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  run_server.py  test_agent.py  test_video_agent.py
src/rvaa/: __init__.py  demo.py
src/rvaa/agent/: __init__.py  root_agent.py  sub_agent.py
src/rvaa/env/: __init__.py  video_env.py
src/rvaa/eval/: __init__.py  ablations.py  cost_accounting.py  metrics.py
src/rvaa/protocols/: __init__.py  events.py
src/rvaa/server/: __init__.py  api.py  streaming.py
src/rvaa/server/static/: index.html
src/rvaa/tools/: __init__.py  index.py  llm_backends.py  perception.py  video_io.py  vision_captioner.py
tests/: conftest.py  test_index.py  test_llm_backends.py  test_root_agent.py
